# musicir

./: .cookiecutter.json  .gitignore  .readthedocs.yml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  noxfile.py  pyproject.toml
.github/disabled/: FUNDING.yml  tests.yml
.github/workflows/: constraints.txt  pages.yml  release.yml  tests.yml
docs/: Extracting_Harmonies.ipynb  Rhythms.ipynb  Scales.ipynb  conf.py  index.rst  reference.md  reference.rst  requirements.txt  usage.rst
examples/: Extracting Harmonies.ipynb  Harmonies.ipynb
src/musicir/: __init__.py  __main__.py
src/musicir/harmony/: __init__.py  scale.py
src/musicir/leadsheets/: model.py  musicxml.py
src/musicir/rhythm/: generate.py
tests/: __init__.py  test_main.py
tests/test_harmony/: test_package.py  test_scale.py
tests/test_leadsheets/: test_model.py  test_musicxml.py
tests/test_rhythm/: test_generate.py
