[tool.poetry]
name = "musicir"
version = "0.0.5"
description = "Music Information Retrieval"
authors = ["Flávio Codeço Coelho <fccoelho@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/fccoelho/musicir"
repository = "https://github.com/fccoelho/musicir"
documentation = "https://musicir.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/fccoelho/musicir/releases"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.1"
music21 = "^7.3.1"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.35"}
attrs = ">=21.4,<23.0"
myst-parser = "^0.17.2"
matplotlib = "^3.5.3"
pretty_midi = "^0.2.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.1"}
safety = "^2.3.5"
mypy = "^0.971"
typeguard = "^2.13.2"
xdoctest = {extras = ["colors"], version = "^1.0.0"}
sphinx = "^4.3.0"
sphinx-autobuild = ">=2021.3.14"
pre-commit = "^2.15.0"
flake8 = "^5.0.4"
black = ">=21.10b0"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.4.25"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.5"
pep8-naming = "^0.13.2"
darglint = "^1.8.1"
reorder-python-imports = "^3.8.1"
pre-commit-hooks = "^4.2.0"
sphinx-click = "^4.1.0"
Pygments = "^2.10.0"
pyupgrade = "^2.29.1"
furo = ">=2021.11.12"
myst = "^1.0.4"
myst-nb = "^0.15.0"
myst-parser = "^0.17.2"
nox = "^2022.1.7"
nox-poetry = "^1.0.0"
nbsphinx = "^0.8.9"

[tool.poetry.scripts]
musicir = "musicir.__main__:main"

[tool.poetry.group.dev.dependencies]
nox-poetry = "^1.0.1"
mypy = "^0.971"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["musicir", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 85

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
